--- a/australia.html
+++ b/australia.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>My Photo Album</title>
+<title>My Photo Album Outside Nepal</title>
 <style>
 body { font-family: Arial, sans-serif; margin:0; background-color:#f0f0f0; color:#333; }
 header { background-color:#4CAF50; color:white; padding:20px; text-align:center; }
