--- a/australia.html
+++ b/australia.html
@@ -67,10 +67,10 @@ h1 { margin:0; }
 
 <script>
 const photos=[
-{src:"photos/photo1.jpg", caption:"Caption 1"},
-{src:"photos/photo2.jpg", caption:"Caption 2"},
-{src:"photos/photo3.jpg", caption:"Caption 3"},
-{src:"photos/photo4.jpg", caption:"Caption 4"}
+{src:"photo/1.jpg", caption:"Caption 1"},
+{src:"photo/2.jpg", caption:"Caption 2"},
+{src:"photo/3.jpg", caption:"Caption 3"},
+{src:"photo/1.jpg", caption:"Caption 4"}
 ];
 
 let currentIndex=0;
