--- a/australia.html
+++ b/australia.html
@@ -47,10 +47,9 @@ h1 { margin:0; }
 </header>
 
 <div class="album-container">
-<div class="photo-card" onclick="openLightbox(0)"><img src="photos/photo1.jpg" alt="Photo 1"><div class="caption">Caption 1</div></div>
-<div class="photo-card" onclick="openLightbox(1)"><img src="photos/photo2.jpg" alt="Photo 2"><div class="caption">Caption 2</div></div>
-<div class="photo-card" onclick="openLightbox(2)"><img src="photos/photo3.jpg" alt="Photo 3"><div class="caption">Caption 3</div></div>
-<div class="photo-card" onclick="openLightbox(3)"><img src="photos/photo4.jpg" alt="Photo 4"><div class="caption">Caption 4</div></div>
+<div class="photo-card" onclick="openLightbox(0)"><img src="photo/1.jpg" alt="Photo 1"><div class="caption">Dashain Tika in Australia 2025</div></div>
+<div class="photo-card" onclick="openLightbox(1)"><img src="photo/1.jpg" alt="Photo 2"><div class="caption">Dashain Tika in Australia 2025</div></div>
+<div class="photo-card" onclick="openLightbox(2)"><img src="photo/1.jpg" alt="Photo 3"><div class="caption">Dashain Tika in Australia 2025</div></div>
 </div>
 
 <!-- Lightbox Modal -->
