--- a/australia.html
+++ b/australia.html
@@ -47,9 +47,9 @@ h1 { margin:0; }
 </header>
 
 <div class="album-container">
-<div class="photo-card" onclick="openLightbox(0)"><img src="photo/1.jpg" alt="Photo 1"><div class="caption">Dashain Tika in Australia 2025</div></div>
-<div class="photo-card" onclick="openLightbox(1)"><img src="photo/1.jpg" alt="Photo 2"><div class="caption">Dashain Tika in Australia 2025</div></div>
-<div class="photo-card" onclick="openLightbox(2)"><img src="photo/1.jpg" alt="Photo 3"><div class="caption">Dashain Tika in Australia 2025</div></div>
+<div class="photo-card" onclick="openLightbox(0)"><img src="photo/1.JPG" alt="Photo 1"><div class="caption">Dashain Tika in Australia 2025</div></div>
+<div class="photo-card" onclick="openLightbox(1)"><img src="photo/2.JPG" alt="Photo 2"><div class="caption">Dashain Tika in Australia 2025</div></div>
+<div class="photo-card" onclick="openLightbox(2)"><img src="photo/3.JPG" alt="Photo 3"><div class="caption">Dashain Tika in Australia 2025</div></div>
 </div>
 
 <!-- Lightbox Modal -->
@@ -66,10 +66,9 @@ h1 { margin:0; }
 
 <script>
 const photos=[
-{src:"photo/1.jpg", caption:"Caption 1"},
-{src:"photo/2.jpg", caption:"Caption 2"},
-{src:"photo/3.jpg", caption:"Caption 3"},
-{src:"photo/1.jpg", caption:"Caption 4"}
+{src:"photo/1.JPG", caption:"Dashain Tika in Australia 2025"},
+{src:"photo/2.JPG", caption:"Dashain Tika in Australia 2025"},
+{src:"photo/3.JPG", caption:"Dashain Tika in Australia 2025"},
 ];
 
 let currentIndex=0;
