--- a/australia.html
+++ b/australia.html
@@ -42,8 +42,8 @@ h1 { margin:0; }
 </head>
 <body>
 <header>
-<h1>My Photo Album</h1>
-<p>Collection of my favorite memories</p>
+<h2>Some Past Memories Collections</h2>
+<p><i>“Collecting little moments that make my heart smile.” </i>😊</p>
 </header>
 
 <div class="album-container">
