--- a/australia.html
+++ b/australia.html
@@ -42,8 +42,8 @@ h1 { margin:0; }
 </head>
 <body>
 <header>
-<h2>Some Past Memories Collections</h2>
-<p><i>“Collecting little moments that make my heart smile.” </i>😊</p>
+<h2>Memories Collections</h2>
+<p><i>Collecting Little Moments that make my heart smile😊</i></p>
 </header>
 
 <div class="album-container">
