--- a/australia.html
+++ b/australia.html
@@ -43,7 +43,7 @@ h1 { margin:0; }
 <body>
 <header>
 <h2>Memories Collections</h2>
-<p><i>Collecting Little Moments that make my heart smile😊</i></p>
+<p><i>Collecting Little Moments that Make My Heart Smile</i></p>
 </header>
 
 <div class="album-container">
