--- a/australia.html
+++ b/australia.html
@@ -42,8 +42,8 @@ h1 { margin:0; }
 </head>
 <body>
 <header>
-<h2>Memories Collections</h2>
-<p><i>Collecting Little Moments that Make My Heart Smile</i></p>
+<h2>Gallery of Good Times</h2>
+<p>Collecting Little Moments that Make My Heart Smile</p>
 </header>
 
 <div class="album-container">
