--- a/index.html
+++ b/index.html
@@ -139,18 +139,18 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="row g-3 mb-4">
                         <div class="col-sm-6">
-                            <img class="img-fluid rounded" src="img/about-4.jpg" alt="">
+                            <img class="img-fluid rounded" src="photo/1.jpg" alt="">
                         </div>
                         <div class="col-sm-6">
-                            <img class="img-fluid rounded" src="img/about-3.jpg" alt="">
+                            <img class="img-fluid rounded" src="photo/2.jpg" alt="">
                         </div>
                     </div>
                     <div class="row g-3 mb-4">
                         <div class="col-sm-6">
-                            <img class="img-fluid rounded" src="img/about-2.jpg" alt="">
+                            <img class="img-fluid rounded" src="photo/3.jpg" alt="">
                         </div>
                         <div class="col-sm-6">
-                            <img class="img-fluid rounded" src="img/about-1.jpg" alt="">
+                            <img class="img-fluid rounded" src="photo/4.jpg" alt="">
                         </div>
                     </div>
                 </div>
