--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                             <img class="img-fluid rounded" src="photo/3.jpg" alt="">
                         </div>
                         <div class="col-sm-6">
-                            <img class="img-fluid rounded" src="photo/4.jpg" alt="">
+                            <img class="img-fluid rounded" src="photo/4.JPG" alt="">
                         </div>
                     </div>
                 </div>
