--- a/minor-project.html
+++ b/minor-project.html
@@ -157,19 +157,19 @@
     <h2>Project Team</h2>
     <div class="member-photos">
         <div class="member-photo">
-            <img src="img/bg-icon.png" alt="Member 1 Photo">
+            <img src="img/" alt="Kobid Karki">
             <p>Kobid Karki</p>
         </div>
         <div class="member-photo">
-            <img src="img/bg-icon.png" alt="Member 2 Photo">
+            <img src="img/bg-icon.png" alt="Lizana Khadka">
             <p>Lizana Khadka</p>
         </div>
         <div class="member-photo">
-            <img src="img/bg-icon.png" alt="Member 3 Photo">
+            <img src="img/bg-icon.png" alt="Rashmi Paudel">
             <p>Rashmi Paudel</p>
         </div>
         <div class="member-photo">
-            <img src="img/bg-icon.png" alt="Member 4 Photo">
+            <img src="img/bg-icon.png" alt="Roshan Ghimire">
             <p>Roshan Ghimire</p>
         </div>
     </div>
@@ -184,3 +184,4 @@
 
 </body>
 </html>
+
