--- a/minor-project.html
+++ b/minor-project.html
@@ -157,19 +157,19 @@
     <h2>Project Team</h2>
     <div class="member-photos">
         <div class="member-photo">
-            <img src="img/" alt="Kobid Karki">
+            <img src="img/member/kobid.jpg" alt="Kobid Karki">
             <p>Kobid Karki</p>
         </div>
         <div class="member-photo">
-            <img src="img/bg-icon.png" alt="Lizana Khadka">
+            <img src="img/member/lizana.jpg" alt="Lizana Khadka">
             <p>Lizana Khadka</p>
         </div>
         <div class="member-photo">
-            <img src="img/bg-icon.png" alt="Rashmi Paudel">
+            <img src="img/member/rashmi.jpg" alt="Rashmi Paudel">
             <p>Rashmi Paudel</p>
         </div>
         <div class="member-photo">
-            <img src="img/bg-icon.png" alt="Roshan Ghimire">
+            <img src="img/member/roshan.jpg" alt="Roshan Ghimire">
             <p>Roshan Ghimire</p>
         </div>
     </div>
@@ -184,4 +184,5 @@
 
 </body>
 </html>
+
 
