--- a/major-project.html
+++ b/major-project.html
@@ -158,19 +158,19 @@
     <h2>Project Team</h2>
     <div class="member-photos">
         <div class="member-photo">
-            <img src="img/bg-icon.png" alt="Member 1 Photo">
+            <img src="img/member/kobid.jpg" alt="Kobid Karki">
             <p>Kobid Karki</p>
         </div>
         <div class="member-photo">
-            <img src="img/bg-icon.png" alt="Member 2 Photo">
+            <img src="img/member/lizana.jpg" alt="Lizana Khadka">
             <p>Lizana Khadka</p>
         </div>
         <div class="member-photo">
-            <img src="img/bg-icon.png" alt="Member 3 Photo">
+            <img src="img/member/rashmi.jpg" alt="Rashmi Paudel">
             <p>Rashmi Paudel</p>
         </div>
         <div class="member-photo">
-            <img src="img/bg-icon.png" alt="Member 4 Photo">
+            <img src="img/member/roshan.jpg" alt="Roshan Ghimire">
             <p>Roshan Ghimire</p>
         </div>
     </div>
@@ -185,3 +185,4 @@
 
 </body>
 </html>
+
