--- a/minor-project.html
+++ b/minor-project.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minor Project: Digital Alarm Clock with Thermometer</title>
+    <title>Digital Alarm Clock with Thermometer</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Times+New+Roman:wght@400;700&display=swap');
 
@@ -184,5 +184,6 @@
 
 </body>
 </html>
+
 
 
