--- a/major-project.html
+++ b/major-project.html
@@ -128,11 +128,9 @@
     </style>
 </head>
 <body>
-
 <header>
-    <h1>Major Project: Cell Phone Based Voting Machine with Voice Acknowledgement</h1>
+    <h1>Cell Phone Based Voting Machine with Voice Acknowledgement</h1>
 </header>
-
 <main>
     <h2>About the Project</h2>
     <p>
@@ -185,5 +183,6 @@
 
 </body>
 </html>
+
 
 
