--- a/minor-project.html
+++ b/minor-project.html
@@ -128,11 +128,9 @@
     </style>
 </head>
 <body>
-
 <header>
-    <h1>Minor Project: Digital Alarm Clock with Thermometer</h1>
+    <h1>Digital Alarm Clock with Thermometer</h1>
 </header>
-
 <main>
     <h2>About the Project</h2>
     <p>
@@ -184,6 +182,7 @@
 
 </body>
 </html>
+
 
 
 
