--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Software Applications Management</p>
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Financial Management Contribution</p>
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Innovative e-Governance Implementation</p>
-                    <a class="btn btn-primary py-3 px-5 mt-3" href="https://erghimire.github.io//#skill">More</a>
+                    <a class="btn btn-primary py-3 px-5 mt-3" href="https://erghimire.github.io/#skill">More</a>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="row g-3 mb-4">
